--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-image: url("https://a-static.besthdwallpaper.com/charmander-having-fun-papel-pintado-57895_L.jpg");
+  height: 100vh;
 }
 
 .App-link {
