--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,58 @@
+* {
+  margin: 0px;
+}
+nav {
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.navbar-image {
+  width: 160px;
+}
+.search-box-container {
+  display: flex;
+  margin: 0px, auto;
+  padding: 0 20px;
+  align-items: center;
+}
+.searchbar {
+  background: white;
+  margin-right: 20px;
+}
+.searchbar input {
+  padding: 10px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+  border: none;
+}
+.searchbar input:focus {
+  outline: none;
+}
+.search-btn button {
+  background-color: #363636;
+  border: none;
+  border-radius: 10px;
+  height: 100%;
+  color: white;
+  padding: 10px 12px;
+}
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+.pokedex-grid {
+  display: grid;
+  grid-auto-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  padding: 0px 10px;
+  
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-image: url("https://a-static.besthdwallpaper.com/charmander-having-fun-papel-pintado-57895_L.jpg");
-  height: 100vh;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
